// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attach.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
      >
        <span
          class="t-button__text"
        >
          点击查看我的父元素(CSSSelector)
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
      >
        <span
          class="t-button__text"
        >
          点击查看我的父元素(Function)
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup-reference"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      <span
        class="t-button__text"
      >
        Hover me
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`controlled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup-reference"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      <span
        class="t-button__text"
      >
        一直显示
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`destroy.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup-reference"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      <span
        class="t-button__text"
      >
        Hover me
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup-reference"
  >
    <button
      class="t-is-disabled t-button t-button--theme-primary t-button--variant-base"
    >
      <span
        class="t-button__text"
      >
        Hover me
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`overlay-style.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
      >
        <span
          class="t-button__text"
        >
          click我试试
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
      >
        <span
          class="t-button__text"
        >
          根据 trigger 元素定制 overlayStyle
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`placements.jsx 1`] = `
<DocumentFragment>
  <div
    style="margin: 0px auto; width: 500px; height: 260px; position: relative;"
  >
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; top: 0px; left: 42%;"
      >
        <span
          class="t-button__text"
        >
          top
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; top: 0px; left: 70px;"
      >
        <span
          class="t-button__text"
        >
          top-left
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; top: 0px; right: 70px;"
      >
        <span
          class="t-button__text"
        >
          top-right
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; bottom: 0px; left: 42%;"
      >
        <span
          class="t-button__text"
        >
          bottom
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; bottom: 0px; left: 70px; width: 120px;"
      >
        <span
          class="t-button__text"
        >
          bottom-left
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; bottom: 0px; right: 70px;"
      >
        <span
          class="t-button__text"
        >
          bottom-right
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; left: 0px; top: 42%;"
      >
        <span
          class="t-button__text"
        >
          left
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; left: 0px; top: 50px;"
      >
        <span
          class="t-button__text"
        >
          left-top
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; left: 0px; bottom: 50px;"
      >
        <span
          class="t-button__text"
        >
          left-bottom
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; right: 0px; top: 42%;"
      >
        <span
          class="t-button__text"
        >
          right
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; right: 0px; top: 50px;"
      >
        <span
          class="t-button__text"
        >
          right-top
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: absolute; right: 0px; bottom: 50px;"
      >
        <span
          class="t-button__text"
        >
          right-bottom
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`triggers.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
      >
        <span
          class="t-button__text"
        >
          悬浮时触发（默认）
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <div
        class="t-input"
        style="width: 200px;"
      >
        <input
          class="t-input__inner"
          placeholder="获得焦点时触发"
          value=""
        />
      </div>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
      >
        <span
          class="t-button__text"
        >
          点击时触发
        </span>
      </button>
    </div>
    <div
      class="t-popup-reference"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
      >
        <span
          class="t-button__text"
        >
          右击时触发
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
